修改进行中页面列表中item样式

--- a/pages/ing/ing.wxml
+++ b/pages/ing/ing.wxml
@@ -35,7 +35,7 @@
       </view>
     </view>
     <view class="ing_item_time2" data-item="{{item}}" id="{{index}}" bindtap="tipItem">
-      <view class="ing_item_title" data-item="{{item}}" id="{{index}}" bindtap="tipItem">
+      <view class="ing_item_title" data-item="{{item}}" id="{{index}}">
         {{item.title}}
       </view>
     </view>
