--- a/app.wxss
+++ b/app.wxss
@@ -71,3 +71,31 @@
   color: #fff;
   /*margin-bottom: 5px;*/
 }
+
+/*暂无完成任务*/
+.zwwcrw{
+  flex: 1;
+  flex-shrink:0;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: #888;
+  font-size: 12px;
+}
+.zw_img{
+  flex-shrink:0;
+  width: 200rpx;
+  height: 200rpx;
+  margin-bottom: 20rpx;
+}
+
+.buttonView_ok {
+  /*flex-shrink: 0;*/
+  height: 150rpx;
+  margin: 60px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
