--- a/pages/ed/ed.wxml
+++ b/pages/ed/ed.wxml
@@ -1,12 +1,6 @@
 
 <!--pages/ed/ed.wxml-->
-<!--<view class="classname">-->
-
-  <!--<view class="ed_userInfo">
-    <image class="ed_userInfo_img" src="{{avatarUrl}}"></image>
-    <view class="ed_userInfo_name">{{nickName}}</view>
-  </view>-->
-  <view class="ing_userinfo_ts">
+   <view class="ing_userinfo_ts">
     <view class="ing_userInfo">
       <image class="ed_userInfo_img" src="{{avatarUrl}}"></image>
       <view class="ing_userInfo_name">{{nickName}}</view>
@@ -18,7 +12,6 @@
   </view>
   <view class="ed_sjz_list" wx:if="{{tasklist.length >= 1}}">
 
-    <!--<view class="ed_sjz_item_zhou_circle2" wx:if="{{tasklist.length >=1}}"></view>-->
     <view class="ed_sjz_item" wx:if="{{tasklist.length >=1}}">
       <view class="ed_sjz_item_time">
       </view>
@@ -59,7 +52,6 @@
       </view>
     </view>
 
-    <!--<view class="ed_sjz_item_zhou_circle2" wx:if="{{tasklist.length >=1}}"></view>-->
   </view>
   <view class="zwwcrw" wx:if="{{tasklist.length == 0}}">
     <image class="zw_img" src="../../resources/img/mr_fd.png" mode="widthFix"></image>
@@ -69,5 +61,7 @@
   </view>
   <view class="buttonView_ok" wx:if="{{tasklist.length == 0}}">
     
-  </view>
-<!--</view>-->
+  </view> 
+  <button class="kf_button" open-type="contact" session-from="weapp">
+    <image class="kf_image" src="../../resources/img/kf.png"></image>
+  </button>
