--- a/pages/ed/ed.wxss
+++ b/pages/ed/ed.wxss
@@ -54,3 +54,20 @@ page, .ing_zt {
 .ed_sjz_item_title_ts1{
   color: #009966;
 }
+
+.kf_button{
+  background-color: rgba(255, 255, 255, 0);
+  border: 0px;
+  height: 100rpx;
+  right: 0;
+  bottom: 20rpx;
+  position: fixed;
+}
+.kf_button::after{
+  border: 0px;
+}
+.kf_image{
+  z-index: 9999;
+  width: 100rpx;
+  height: 100rpx;
+}
